[package]
name = "direction"
description = "Representations of directions"
version = "0.15.1"
authors = ["Stephen Sherratt <sfsherratt@gmail.com>"]
license = "MIT"
documentation = "https://docs.rs/direction"
repository = "https://github.com/stevebob/direction.git"
homepage = "https://github.com/stevebob/direction.git"
readme = "README.md"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
grid_2d = "0.8"
