[package]
name = "direction"
description = "Representations of directions"
version = "0.17.7"
authors = ["Stephen Sherratt <sfsherratt@gmail.com>"]
license = "MIT"
documentation = "https://docs.rs/direction"
repository = "https://github.com/stevebob/direction.git"
homepage = "https://github.com/stevebob/direction.git"
readme = "README.md"

[features]
serialize = ["serde", "coord_2d/serde"]

[dependencies]
serde = { version = "1.0", features = ["serde_derive"], optional = true }
coord_2d = "0.2"
